src/components/FloatButtons/FloatButtons.module.css
.up {
  position: fixed;
  right: 50px;
  bottom: 50px;
  z-index: 1000;
  border: none;
  background-color: var(--color-secondary);
  border-radius: 100%;
  transition: opacity 0.5s ease;
  width: 50px;
  height: 50px;
}
.phone {
  display: none;
}
.phoneIcon {
  width: 70px;
  height: 70px;
}
.up img {
  width: 100%;
  height: 100%;
  filter: invert(95%) sepia(100%) saturate(2%) hue-rotate(144deg)
    brightness(104%) contrast(99%);
}
@media screen and (max-width: 630px) {
  .phone {
    display: block;
    position: fixed;
    right: 40px;
    bottom: 105px;
  }
}

